--- a/ecommerce/package.json
+++ b/ecommerce/package.json
@@ -18,6 +18,7 @@
     "react-elastic-carousel": "^0.11.5",
     "react-img-zoom": "^0.1.0",
     "react-scripts": "4.0.3",
+    "react-star-ratings": "^2.3.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
