--- a/ecommerce/package.json
+++ b/ecommerce/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
     "react-img-zoom": "^0.1.0",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "react-star-ratings": "^2.3.0",
     "styled-components": "^5.3.3",
