Init admin dashboard

--- a/ecommerce/package.json
+++ b/ecommerce/package.json
@@ -23,6 +23,8 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "react-star-ratings": "^2.3.0",
+    "react-stripe-checkout": "^2.6.3",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
