--- a/admin/package.json
+++ b/admin/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@googlemaps/react-wrapper": "^1.1.28",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.5.0",
@@ -17,6 +18,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-simple-maps": "^2.3.0",
+    "react-tooltip": "^4.2.21",
     "recharts": "^2.1.9",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
