--- a/admin/package.json
+++ b/admin/package.json
@@ -9,6 +9,7 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.5.0",
+    "@mui/lab": "^5.0.0-alpha.75",
     "@mui/material": "^5.5.0",
     "@mui/x-data-grid": "^5.6.1",
     "@reduxjs/toolkit": "^1.8.0",
@@ -16,7 +17,9 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "date-fns": "^2.28.0",
     "react": "^17.0.2",
+    "react-calendar": "^3.7.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
